--- a/templates/generators/tarot_key.html
+++ b/templates/generators/tarot_key.html
@@ -98,39 +98,37 @@
            src="{% static 'img/Paul.gif' %}" alt="narrative" class="show-img-shadow" id="st-paul-img"> <br /> St Paul</li>
 
         </ul>
+        <div id="contents-wrapper">
+            <div id="galileo-content" class="narrative-h1s"> 
+                <h1 class="narrative-h1s animated fadeInRightBig">Galileo</h1>
+                <p class="content animated fadeInRightBig"> {{ generator.galileo_content|safe }} </p>
+                <ul class="bullets animated fadeInRightBig">
+                {% for point in generator.galileo_to_bullet %}
+                    <li>{{point}}</li>
+                {% endfor %}
+                </ul>  
+            </div><!-- end  galileo-content -->
+                
+            <div id="f-loss-content"> 
+                <h1 class="narrative-h1s animated fadeInRightBig">F/LOSS</h1>
+                <p class="content animated fadeInRightBig">{{ generator.f_loss_content|safe }}</p>
+                <ul class="bullets animated fadeInRightBig">
+                {% for point in generator.f_loss_to_bullet %}
+                    <li>{{point}}</li>
+                {% endfor %}
+                </ul> 
+            </div> <!-- end  f-loss-content -->
 
-          <div id="galileo-content" class="narrative-h1s"> 
-            <h1 class="narrative-h1s animated fadeInRightBig">Galileo</h1>
-            <p class="content animated fadeInRightBig"> {{ generator.galileo_content|safe }} </p>
-            <ul class="bullets animated fadeInRightBig">
-              {% for point in generator.galileo_to_bullet %}
-                <li>{{point}}</li>
-              {% endfor %}
-            </ul>  
-          </div><!-- end  galileo-content -->
-
-          {% comment %} {{ generator.galileo_bullets|safe }} {% endcomment %}
-
-          <div id="f-loss-content"> 
-            <h1 class="narrative-h1s animated fadeInRightBig">F/LOSS</h1>
-            <p class="content animated fadeInRightBig">{{ generator.f_loss_content|safe }}</p>
-            <ul class="bullets animated fadeInRightBig">
-              {% for point in generator.f_loss_to_bullet %}
-                <li>{{point}}</li>
-              {% endfor %}
-            </ul> 
-          </div> <!-- end  f-loss-content -->
-
-          <div id="st-paul-content"> 
-            <h1 class="narrative-h1s animated fadeInRightBig">St. Paul</h1>
-            <p class="content animated fadeInRightBig">{{ generator.st_paul_content|safe }}</p>        
-              <ul class="bullets animated fadeInRightBig">
-              {% for point in generator.paul_to_bullet %}
-                <li>{{point}}</li>
-              {% endfor %}
-            </ul>        
-          </div> <!-- end  st-paul-content -->
-
+            <div id="st-paul-content"> 
+                <h1 class="narrative-h1s animated fadeInRightBig">St. Paul</h1>
+                <p class="content animated fadeInRightBig">{{ generator.st_paul_content|safe }}</p>        
+                <ul class="bullets animated fadeInRightBig">
+                {% for point in generator.paul_to_bullet %}
+                    <li>{{point}}</li>
+                {% endfor %}
+                </ul>        
+            </div> <!-- end  st-paul-content -->
+        </div>    
         </section>
 
       </div> <!-- end wrapper star -->
