--- a/templates/work_orders/fourth_work_order.html
+++ b/templates/work_orders/fourth_work_order.html
@@ -73,7 +73,15 @@
 <ul>
 <li> Is it possible to leave a PGP signature for web viewers to verify the authenticity of an essay that I have posted, like for certain blog posts when they are served by Django? </li>
 <li>Is it possible to prove / verify that I am indeed the true autentic author of a blog published anonymously. My ideal end goal / purpose is to show a guest / friend in person using my Android smartphone that I am the official author of a blog post / essay / article. Is this possible? If so, how?</li>
-</ul>
+</ul></li>
+<br>
+<hr>
+<center><H1> NEW MILESTONE </H1></center>
+<hr>
+<br>
+<li><strong>Question</strong>: What is `except e` (line 21 in views.py of generators app)?</li>
+<li><strong>Question</strong>: What does `DEFAULT_KEY` in `essays/models.py` do? I tried changing the integer from `1` to `12` and I didn’t notice a difference in how the generator behaves. </li>
+<li><strong>`_topbar.html` partial</strong>: Make the (1) phone number, (2) email address and (3) social media icons stack vertically on top of each other at the center of the top bar when the window is 990 px wide (or less) - -  instead of only 776px (or less).</li>
 </ol>
 
 
