Mark Req #2 completed

--- a/templates/work_orders/fourth_work_order.html
+++ b/templates/work_orders/fourth_work_order.html
@@ -51,7 +51,8 @@
 <span class="completed"><ul><li>Could you fix this? </li></ul></span>
 <ul><li><strong>COMPLETED 31 MARCH</strong></li></ul>
 
-<li><strong>CSS/JS(?) in tarot_key.html template</strong>: Right now at narrow (mobile) resolutions, when selecting and deselecting Galileo/FLOSS/St Paul img icons, the screen’s position abruptly shifts up a few hundred pixels. To replicate this glitch using Chrome Developer Tools at mobile resolutions, just click on the img heads a few times. Could you correct this so that on img toggle at mobile resolutions the screen position no longer moves up a few hundred pixels?</li>
+<li><span class="completed"><strong>CSS/JS(?) in tarot_key.html template</strong>: Right now at narrow (mobile) resolutions, when selecting and deselecting Galileo/FLOSS/St Paul img icons, the screen’s position abruptly shifts up a few hundred pixels. To replicate this glitch using Chrome Developer Tools at mobile resolutions, just click on the img heads a few times. Could you correct this so that on img toggle at mobile resolutions the screen position no longer moves up a few hundred pixels?</li></span>
+<ul><li><strong>COMPLETED 2ND APRIL</strong></li></ul>
 
 <span class="completed"><li><strong>CSS in `templates/landings/portal.html` (the parent landing page / homepage for the website)</strong>: When emulating smartphones using Chrome Developer Tools, the “@ SLASHDOT” text is cut off and you can’t see the “Tarot” heading text. For an image, <a href="https://i.imgur.com/W8KelET.png">see here</a>.</li></span>
 <span class="completed"><ul><li>How do you fix this so that “Tarot” appears one third down the web page at horizontal smartphone resolutions while keeping the current formatting and style positioning at larger resolutions?</li></ul></span>
