--- a/templates/work_orders/fourth_work_order.html
+++ b/templates/work_orders/fourth_work_order.html
@@ -80,8 +80,10 @@
 <center><H1> NEW MILESTONE </H1></center>
 <hr>
 <br>
-<li><strong>Question</strong>: What is `except e` (line 21 in views.py of generators app)?</li>
-<li><strong>Question</strong>: What does `DEFAULT_KEY` in `essays/models.py` do? I tried changing the integer from `1` to `12` and I didn’t notice a difference in how the generator behaves. </li>
+<li><span class="completed"><strong>Question</strong>: What is `except e` (line 21 in views.py of generators app)?</span></li>
+<ul><li><strong>COMPLETED 10 APRIL</strong></li></ul>
+<li><span class="completed"><strong>Question</strong>: What does `DEFAULT_KEY` in `essays/models.py` do? I tried changing the integer from `1` to `12` and I didn’t notice a difference in how the generator behaves. </span></li>
+<ul><li><strong>COMPLETED 10 APRIL</strong></li></ul>
 <li><strong>`_topbar.html` partial</strong>: Make the (1) phone number, (2) email address and (3) social media icons stack vertically on top of each other at the center of the top bar when the window is 990 px wide (or less) - -  instead of only 776px (or less).</li>
 </ol>
 
