--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -5,7 +5,7 @@
           <i class="fas fa-phone"></i> 1 (888) 512-1984
         </div>
         <div class="topbar-content col-md-4">
-          <i class="fas fa-envelope-open"></i>&nbsp;The.First.Initiate.1614@gmail.com
+          <i class="fas fa-envelope-open"></i>&nbsp;The.First.Initiate.1614@protonmail.com
         </div>
         <div class="topbar-content col-md-4">
           <div class="social text-right">
