Add 'gateway' ('home') menu option in navbar

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -16,7 +16,16 @@
               class="nav-item mx-auto mr-md-3 align-self-center"
             {% endif %}
           >
-            <a class="nav-link" href="{% url 'portal' %}">Home</a>
+            <a class="nav-link" href="{% url 'gateway' %}">Home</a>
+          </li>
+          <li
+            {% if '/' == request.path %}
+              class="nav-item active mr-md-3  mx-auto align-self-center"
+            {% else %}
+              class="nav-item mx-auto mr-md-3 align-self-center"
+            {% endif %}
+          >
+            <a class="nav-link" href="{% url 'portal' %}">Portal</a>
           </li>
 
           <li
