Add is_published Bool to essays app models

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -51,7 +51,7 @@
     
     <center></center>
 
-    <!-- To F/LOSS/GG index.html export:  -->
+    <!-- To F/LOSS/GG:  -->
     <h3><a href="{% url 'slashdot' %}">@ SLASHDOT</a></h3> 
     
     <!-- To Forrest Gump article:  -->
@@ -62,7 +62,7 @@
       </div>
     </h3> 
 
-    <!-- To St Paul index.html export:  -->
+    <!-- To St Paul:  -->
     <h3><a href="{% url 'watchtower' %}">@ THE WATCHTOWER</a></h3> 
     
     <!-- Special article:  -->
