Refactor 'gateway' to 'index'

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -16,7 +16,7 @@
               class="nav-item mx-auto mr-md-3 align-self-center"
             {% endif %}
           >
-            <a class="nav-link" href="{% url 'gateway' %}">Home</a>
+            <a class="nav-link" href="{% url 'index' %}">Home</a>
           </li>
           <li
             {% if '/' == request.path %}
