Change passphrase form 'username'

--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -97,13 +97,13 @@ a:active {
                   <input type="password" name="password" class="form-control" required>
                 </div>
                 <input type="submit" value="Login" class="btn btn-secondary btn-block">
-                <br>Not a member yet?  <a href="{% url 'register' %}">Apply here today!</a>
+                <br>Not a member yet?  <a href="{% url 'register' %}">Register!</a>
 <Hr>
                   <H1>Alternatively:</h1>
                   <h4>(Bypass username and password requirement)</h4>
                  <div class="form-group">
-                  <label for="username">Enter Your Pass Phrase Shortcut:</label>
-                  <input type="text" name="username" class="form-control" required>
+                  <label for="passphrase">Enter Your Pass Phrase Shortcut:</label>
+                  <input type="text" name="passphrase" class="form-control" required>
                 </div>
                 <input type="submit" value="Byass" class="btn btn-secondary btn-block">
 
