--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -98,18 +98,23 @@ a:active {
                 </div>
                 <input type="submit" value="Login" class="btn btn-secondary btn-block">
                 <br>Not a member yet?  <a href="{% url 'register' %}">Register!</a>
-<Hr>
-                  <H1>Alternatively:</h1>
-                  <h4>(Bypass username and password requirement)</h4>
-                 <div class="form-group">
-                  <label for="passphrase">Enter Your Pass Phrase Shortcut:</label>
-                  <input type="text" name="passphrase" class="form-control" required>
-                </div>
-                <input type="submit" value="Byass" class="btn btn-secondary btn-block">
-
               </form>
            </div>
-          
+
+    <div>
+      <form action="{% url 'index' %}" method="POST">
+          {% csrf_token %}
+        <H1>Alternatively:</h1>
+          <h4>(Bypass username and password requirement)</h4>
+         <div class="form-group">
+          <label for="passphrase">Enter Your Pass Phrase Shortcut:</label>
+          <input type="text" name="passphrase" class="form-control" required>
+        </div>
+        <input type="submit" value="Byass" class="btn btn-secondary btn-block">
+
+      </form>
+    </div>
+
 </section>
 
   
