Add 'hermetic sealed' heading

--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -80,7 +80,7 @@ a:active {
 
     <img src="https://placekitten.com/200/287">
     <h3> Figure 1: Catz</h3>
-
+    <h1> This website is hermetically sealed. </h1>
               <!-- Alerts -->
               {% include 'partials/_alerts.html' %}
 
