--- a/tarot_juicer/static/css/carousel.css
+++ b/tarot_juicer/static/css/carousel.css
@@ -2,10 +2,14 @@
 :root {
   --gap: 10px;
   --carousel-width: 80%;
+  --carousel-height: 230px;
 }
 
 .carousel {
-  width: var(--carousel-width);
+    width: var(--carousel-width);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .hide {
@@ -90,7 +94,7 @@
   }
 
   to {
-    height: 350px;
+    height:  var(--carousel-height);
   }
 }
 
@@ -109,7 +113,7 @@
   }
 
   to {
-    height: 350px;
+    height: var(--carousel-height);
   }
 }
 
@@ -125,7 +129,7 @@
 @-webkit-keyframes hideCarousel {
   from {
     opacity: 1;
-    height: 350px;
+    height: var(--carousel-height);
     visibility: visible;
   }
 
@@ -145,7 +149,7 @@
 @keyframes hideCarousel {
   from {
     opacity: 1;
-    height: 350px;
+    height: var(--carousel-height);
     visibility: visible;
   }
 
