Refine styling for _alerts.html partial

--- a/templates/landings/gateway.html
+++ b/templates/landings/gateway.html
@@ -68,6 +68,21 @@ a:hover {
 a:active {
   color: crimson;
 }
+  /* #id {
+    overflow: hidden;
+  }*/
+  
+  .container {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: crimson;
+    padding: 15px;
+  }
+
+  div {
+    display: block;
+  }
 
   </style>
 {% endblock %}
