--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -46,11 +46,29 @@
     
     <!-- Original concept borrowed from Marco Dell'Anna in a CodePen titled ALIEN - Deviation of microcosm, source: https://codepen.io/plasm/pen/JNPXxg  -->
 
+    <style>
+    </style>
 
-    <h1>Tarot</h1>
+    <h1>exousia <span id="def">(ex-ou-<strong>SEEAH</strong>) n.
     
-    <center></center>
+      <br />   <br />
+      From Koine Greek ἐξοντ- (exont-, participle) +‎ -ῐ́ᾱ (-íā, verbal adjective suffix), from ἔξεστι (éxesti, “it is possible, it is allowed”).
+      <br />
+      <strong>1.</strong> <em>power</em>, means, license, or authority to do something.</span>
+    
+      
+    <h1 >
+      
+      <center>
+        <span id="def">"All things are subject to interpretation. Whichever interpretation prevails at a given time is a function, not of truth, but of power." <br />- - Nietzsche, <em>Will to Power</em>  </span>  
+      </center>
+      
+    </h1>
+    <img class="site-logo one" src="https://i.imgur.com/MdFvO57.jpg" alt="Strength" />
 
+      <img class="site-logo two" src="https://i.imgur.com/1i6kGdC.jpg" alt="The Empress" />
+  
+      <img class="site-logo three" src="https://i.imgur.com/ob343qN.jpg" alt="The Emperor"/>
     <!-- To F/LOSS/GG:  -->
     <h3><a href="{% url 'slashdot' %}">@ SLASHDOT</a></h3> 
     
@@ -65,21 +83,21 @@
     <!-- To St Paul:  -->
     <h3><a href="{% url 'watchtower' %}">@ THE WATCHTOWER</a></h3> 
     
-    <!-- Special article:  -->
+    <!-- Special article:  
     <h3>
       <div class="tooltip">
         <a href="#">@ AMERIKA</a>
         <span class="tooltiptext">Pending</span>
       </div>
     </h3> 
-    
+    -->
     <hr>    
 
     <h3><a href="{% url 'essay_list' %}">Essay list</a></h3>
         
-    <br />
-    <center><img id="pent" src="{% static 'img/pentacle.gif' %}" /></center>
-    <br />
+    <!-- <br />
+    {% comment %}<center><img id="pent" src="{% static 'img/pentacle.gif' %}" /></center>{% endcomment %}
+    <br /> -->
     
     <!-- To landing page explaining "why" and "what" of this website:  -->
     <h3><a href="{% url 'about' %}">(About)</a></h3> 
@@ -126,8 +144,8 @@
    </script>
 
 
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
-  <script src="{% static 'js/alien.js' %}"></script> 
+  <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js" ></script>
+  {% comment %} <script src="{% static 'js/alien.js' %}"></script> {% endcomment %} -->
      
 </body>
   
