Add TM img + switch 2 of 3 tarot card images on imgur

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -48,7 +48,7 @@
 
     <style>
     </style>
-
+    
     <h1>exousia <span id="def">(ex-ou-<strong>SEEAH</strong>) n.
     
       <br />   <br />
@@ -60,13 +60,13 @@
     <h1 >
       
       <center>
-        <span id="def">"All things are subject to interpretation. Whichever interpretation prevails at a given time is a function, not of truth, but of power." <br />- - Nietzsche, <em>Will to Power</em>  </span>  
+        <span id="def">"All things are subject to interpretation. Whichever interpretation prevails at a given time is a function, not of truth, but of power." <br />- - Friedrich Nietzsche, <em>Will to Power</em>  </span>  
       </center>
       
     </h1>
-    <img class="site-logo one" src="https://i.imgur.com/MdFvO57.jpg" alt="Strength" />
+    <img class="site-logo one" src="https://i.imgur.com/4flm4my.jpg" alt="The Tower" />
 
-      <img class="site-logo two" src="https://i.imgur.com/1i6kGdC.jpg" alt="The Empress" />
+      <img class="site-logo two" src="https://i.imgur.com/JKFJ68x.jpg" alt="Judgement" />
   
       <img class="site-logo three" src="https://i.imgur.com/ob343qN.jpg" alt="The Emperor"/>
     <!-- To F/LOSS/GG:  -->
@@ -111,9 +111,7 @@
     </div> 
      <figcaption>Video Description would go here.</figcaption> 
     </figure> -->
-
-</div>
-  <div class="more-pens">
+    <center><img width="5%" src="{% static 'img/TM-retry-crimson.png' %}"></center>
   
   </div>
 
